--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
   </i>
     <section id="matrix-mutation">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
-        <b><a style="color: red;" href="mutPattern.html">Matrix mutation</a></b> (maintained by Antoine de Saint Germain)
+        <b><a style="color: red;" href="mutPattern.html">Matrix mutation</a>, maintained by Antoine de Saint Germain</b> 
         <p>Computing matrix mutation for arbitrary integer matrices</p>
       </div>
       
@@ -48,22 +48,32 @@
 
     <section id="greedy-elements">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
-      <b><a style="color: red;" href="greedy.html">Rank 2 cluster algebras</a></b>
-      (maintained by Antoine de Saint Germain)
+      <b><a style="color: red;" href="greedy.html">Rank 2 cluster algebras</a>, maintained by Antoine de Saint Germain</b>
+      
       <p>Compute greedy elements and d-vector fans in rank 2 cluster algebras</p>
       </div>
     </section>
 
     <section id="acyclicComb">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
-      <b><a style="color: red;" href="acyclic.html">Frieze patterns</a></b>
-      (maintained by Antoine de Saint Germain)
+      <b><a style="color: red;" href="acyclic.html">Frieze patterns</a>, maintained by Antoine de Saint Germain</b>
       <p>Compute frieze patterns, Y-frieze patterns, tropical friezes, cluster-additive functions for acyclic cluster algebras.</p>
     </div>
     </section>
+
+    <section id="externalLinks">
+      <div style="display: flex; flex-direction: column; align-items: flex-start;">
+      <b>External links</b>
+      <p><ul>
+        <li><a style="color: red"; href="https://www.math.ucla.edu/~galashin/plabic.html">Plabic tilings</a>, maintained by Pavel Galashin  </li>
+        <li><a style="color: red"; href="https://webusers.imj-prg.fr/~bernhard.keller/quivermutation/">Quiver mutation</a>, maintained by Bernhard Keller</li>
+        <li><a style="color: red"; href="https://tarheels.live/weng/javascript-applets/">Demazure weaves, Le diagrams and braid fillings</a>, maintained by Daping Weng</li>
+        <li><a style="color: red"; href="https://sl2tilings.github.io/triangulated.html">SL2 tilings</a>, maintained by Andrei Zabolotskii</li>
+      </ul></p>
+    </section>
   </main>
   <footer>
-    <p>Copyright &copy; 2023 Visual Cluster Algebras</p>
+    <p>Copyright &copy; 2025 Visual Cluster Algebras</p>
   </footer>
 </body>
 </html>
