add Triangulations & friezes

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
       <li ><a href="mutPattern.html">Matrix mutation</a></li>
       <li ><a href="greedy.html">Rank 2</a></li>
       <li><a href="acyclic.html">Frieze patterns</a></li>
+      <li><a href="triangulated.html">Triangulations and friezes</a></li>
       <li><a href="about.html">Contact Us</a></li>
     </ul>
     </nav>
@@ -31,7 +32,7 @@
     <h4>About us</h4>
     <ul>
       <li>Website author: Antoine de Saint Germain (reach me via <i>adsg96 [at] hku.hk</i>)</li>
-      <li>Content contributors: Antoine de Saint Germain</li>
+      <li>Content contributors: Antoine de Saint Germain; Andrei Zabolotskii</li>
     </ul>
 
     <h4>References</h4>
@@ -46,7 +47,7 @@
 
   </main>
   <footer>
-    <p>Copyright &copy; 2023 Visual Cluster Algebras</p>
+    <p>Copyright &copy; 2023–2025 Visual Cluster Algebras</p>
   </footer>
 </body>
 </html>
