--- a/greedy.html
+++ b/greedy.html
@@ -25,6 +25,7 @@
 		  <li ><a href="mutPattern.html">Matrix mutation</a></li>
 		  <li ><a href="greedy.html">Rank 2</a></li>
 		  <li><a href="acyclic.html">Frieze patterns</a></li>
+		  <li><a href="triangulated.html">Triangulations and friezes</a></li>
 		  <li><a href="about.html">Contact Us</a></li>
 		</ul>
 		</nav>
