--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
       <li ><a href="mutPattern.html">Matrix mutation</a></li>
       <li ><a href="greedy.html">Rank 2</a></li>
       <li><a href="acyclic.html">Frieze patterns</a></li>
+	  <li><a href="triangulated.html">Triangulations and friezes</a></li>
       <li><a href="about.html">Contact Us</a></li>
     </ul>
     </nav>
@@ -61,6 +62,13 @@
     </div>
     </section>
 
+    <section id="triangulated">
+      <div style="display: flex; flex-direction: column; align-items: flex-start;">
+      <b><a style="color: red;" href="triangulated.html">Triangulations and friezes</a>, maintained by Andrei Zabolotskii</b>
+      <p>Show connections between triangulations, paths in the Farey graph, frieze patterns and cluster variables of type A<sub>n</sub></p>
+    </div>
+    </section>
+
     <section id="externalLinks">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
       <b>External links</b>
@@ -68,7 +76,6 @@
         <li><a style="color: red"; href="https://www.math.ucla.edu/~galashin/plabic.html">Plabic tilings</a>, maintained by Pavel Galashin  </li>
         <li><a style="color: red"; href="https://webusers.imj-prg.fr/~bernhard.keller/quivermutation/">Quiver mutation</a>, maintained by Bernhard Keller</li>
         <li><a style="color: red"; href="https://tarheels.live/weng/javascript-applets/">Demazure weaves, Le diagrams and braid fillings</a>, maintained by Daping Weng</li>
-        <li><a style="color: red"; href="https://sl2tilings.github.io/triangulated.html">SL2 tilings</a>, maintained by Andrei Zabolotskii</li>
       </ul></p>
     </section>
   </main>
