--- a/doubleBruhat.html
+++ b/doubleBruhat.html
@@ -26,7 +26,7 @@
 		</nav>
 	  </header>
   <main>
-
+  	<p>STILL IN CONSTRUCTION</p>
   	<div class="dashboard">
   	<div style="font-weight: bold;">1. Choose rank of Lie group</div>
   	<p style="display: inline-block;">n = </p>
@@ -59,7 +59,7 @@
   		<table>
 			<thead>
 				<td id="WordHead" style="padding-right: 30px">Double reduced word</td>
-				<td id="initialMatrixHead" >Initial mutation matrix</td>
+				<td id="initialMatrixHead"></td>
 			</thead>
 			<tr>
 				<td style="padding-right: 30px"><div style="display: flex; justify-content: center;" id="WordContainer"></div></td>
