double Bruhat ready to launch

--- a/home.html
+++ b/home.html
@@ -69,6 +69,13 @@
     </div>
     </section>
 
+    <section id="doubleBruhat">
+      <div style="display: flex; flex-direction: column; align-items: flex-start;">
+      <b><a style="color: red;" href="doubleBruhat.html">Double Bruhat cells</a>, maintained by Antoine de Saint Germain</b>
+      <p>Compute the initial mutation matrix associated to any double reduced word for a double Bruhat cell.</p>
+    </div>
+    </section>
+
     <section id="externalLinks">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
       <b>External links</b>
