--- a/doubleBruhat.html
+++ b/doubleBruhat.html
@@ -3,10 +3,19 @@
 <head>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="acyclic.css">
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
 	<!-- Import math.js to perform maths operations in JS -->
 	<script src="math.js" type="text/javascript"></script>
+<!-- <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+	
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
+</script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
+	<!-- Import math.js to perform maths operations in JS
+	<script src="math.js" type="text/javascript"></script> -->
 	<script type="text/javascript" src="doubleBruhat.js"></script>
     <script type="text/javascript" src="acyclic.js"></script>
 </head>
@@ -27,7 +36,7 @@
 	  </header>
   <main>
   	<div class="dashboard">
-  	<div style="font-weight: bold;">1. Choose rank of Lie group</div>
+  	<div style="font-weight: bold;">1. Choose rank of Lie group \(G\)</div>
   	<p style="display: inline-block;">n = </p>
   	<input type="number" id="userInputRank" min="1" step="1" value="3">
   	<button onclick="rankToType()">Submit</button>
@@ -58,11 +67,13 @@
   		<table>
 			<thead>
 				<td id="WordHead" style="padding-right: 30px">Double reduced word</td>
-				<td id="initialMatrixHead"></td>
+				<td id="initialMatrixHead">Initial mutation matrix</td>
+				<td id="initialPrincipalPartHead">Principal part</td>
 			</thead>
 			<tr>
 				<td style="padding-right: 30px"><div style="display: flex; justify-content: center;" id="WordContainer"></div></td>
 				<td><div style="display: flex; justify-content: center;" id="initialMatrix"></div></td>
+				<td><div style="display: flex; justify-content: center;" id="initialPrincipalPart"></div></td>
 			</tr>
 		</table>
 
