--- a/mutPattern.html
+++ b/mutPattern.html
@@ -3,7 +3,6 @@
 <head>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mutPattern.css">
-	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
 	<!-- Import math.js to perform maths operations in JS -->
 	<script src="math.js" type="text/javascript"></script>
@@ -39,15 +38,15 @@
   				</td>
   				<td style="padding-right: 30px">
   					<input type="checkbox" id="AtropMinCheckBox">
-					<label for="AtropMinCheckBox">\(\mathbb{A}(\mathbb{Z}^{\rm min})\)-tropical point</label><br>
+					<label for="AtropMinCheckBox">\(\mathcal{A}(\mathbb{Z}^{\rm min})\)-tropical point</label><br>
 					<input type="checkbox" id="YtropMinCheckBox">
-					<label for="YtropMinCheckBox">\(\mathbb{Y}(\mathbb{Z}^{\rm min})\)-tropical point</label><br> 
+					<label for="YtropMinCheckBox">\(\mathcal{X}(\mathbb{Z}^{\rm min})\)-tropical point</label><br> 
   				</td>
   				<td >
   					<input type="checkbox" id="AtropMaxCheckBox">
-					<label for="AtropMaxCheckBox">\(\mathbb{A}(\mathbb{Z}^{\rm max})\)-tropical point</label><br>
+					<label for="AtropMaxCheckBox">\(\mathcal{A}(\mathbb{Z}^{\rm max})\)-tropical point</label><br>
 					<input type="checkbox" id="YtropMaxCheckBox">
-					<label for="YtropMaxCheckBox">\(\mathbb{Y}(\mathbb{Z}^{\rm max})\)-tropical point</label><br>
+					<label for="YtropMaxCheckBox">\(\mathcal{X}(\mathbb{Z}^{\rm max})\)-tropical point</label><br>
   				</td>
   			</tr>
   		</table><br>
@@ -218,10 +217,10 @@
 		<table>
 			<thead>
 				<td id="mutMatHeader" style="visibility: hidden;">Mutation matrix</td>
-				<td id="AtropMinHeader" style="visibility: hidden;">\(\mathbb{A}(\mathbb{Z}^{\rm min})\)-tropical point</td>
-				<td id="YtropMinHeader" style="visibility: hidden;">\(\mathbb{Y}(\mathbb{Z}^{\rm min})\)-tropical point</td>
-				<td id="AtropMaxHeader" style="visibility: hidden;">\(\mathbb{A}(\mathbb{Z}^{\rm max})\)-tropical point</td>
-				<td id="YtropMaxHeader" style="visibility: hidden;">\(\mathbb{Y}(\mathbb{Z}^{\rm max})\)-tropical point</td>
+				<td id="AtropMinHeader" style="visibility: hidden;">\(\mathcal{A}(\mathbb{Z}^{\rm min})\)-tropical point</td>
+				<td id="YtropMinHeader" style="visibility: hidden;">\(\mathcal{X}(\mathbb{Z}^{\rm min})\)-tropical point</td>
+				<td id="AtropMaxHeader" style="visibility: hidden;">\(\mathcal{A}(\mathbb{Z}^{\rm max})\)-tropical point</td>
+				<td id="YtropMaxHeader" style="visibility: hidden;">\(\mathcal{X}(\mathbb{Z}^{\rm max})\)-tropical point</td>
 			</thead>
 			<tr>
 				<td><div style="display: flex; justify-content: center;" id="tableContainer"></div></td>
