mathjax issues again

--- a/doubleBruhat.html
+++ b/doubleBruhat.html
@@ -36,7 +36,7 @@
 	  </header>
   <main>
   	<div class="dashboard">
-  	<div style="font-weight: bold;">1. Choose rank of Lie group \(G\)</div>
+  	<div style="font-weight: bold;">1. Choose rank of Lie group</div>
   	<p style="display: inline-block;">n = </p>
   	<input type="number" id="userInputRank" min="1" step="1" value="3">
   	<button onclick="rankToType()">Submit</button>
