--- a/Grassmannian-rectseed.html
+++ b/Grassmannian-rectseed.html
@@ -16,8 +16,9 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> -->
 	<!-- Import math.js to perform maths operations in JS
 	<script src="math.js" type="text/javascript"></script> -->
-	<script type="text/javascript" src="doubleBruhat.js"></script>
-    <script type="text/javascript" src="acyclic.js"></script>
+	<script type="text/javascript" src="Grassmannian-rectseed.js"></script>
+    <!--<script type="text/javascript" src="acyclic.js"></script> -->
+	
 </head>
 
 <body>
@@ -36,42 +37,24 @@
 	  </header>
   <main>
   	<div class="dashboard">
-  	<div style="font-weight: bold;">1. Choose rank of Lie group</div>
+  	<div style="font-weight: bold;">1. Choose Grassmannian parameters</div>
   	<p style="display: inline-block;">n = </p>
   	<input type="number" id="userInputRank" min="1" step="1" value="3">
-  	<button onclick="rankToType()">Submit</button>
-  	</div>
-
-  	<br>
-
-	<div id="TypeDashboard" class="dashboardOff">
-  	<div style="font-weight: bold;">2. Choose Cartan-Killing type</div>
-  	<div style="display: inline-block;" id="TypeButtons">  </div>
-  	<!-- <button onclick="customCartan()">Custom Cartan matrix</button>
-  	<div style="display: inline-block;" id="customCartanContainer"></div>
-  	<button id="customCartanSubmitButt" style="display: none;" onclick="customCartanSubmit()">Submit</button>
-  	<br> -->
-  	<div id="UserCartanDisplay"></div>  
-
-  	<br>
-
-  	<div style="font-weight: bold;">3. Choose double reduced word (separated by commas)</div>
-  	  	<p style="display: inline-block;"><b>i</b> = </p>
-		<input type="text" id="userInputWord"><button onclick="doubleWord()"> Submit</button>
+  	<p style="display: inline-block;">k = </p>
+  	<input type="number" id="userInputRank" min="1" step="1" value="3">
+  	<button onclick="Grassrectseed()">Submit</button>
   	</div>
 
   	<br>
 
   	<div class="dashboardOff" id="InitialDashboard">
-  		<div style="font-weight: bold;">4. Outcome</div>
+  		<div style="font-weight: bold;">2. Outcome</div>
   		<table>
 			<thead>
-				<td id="WordHead" style="padding-right: 30px">Double reduced word</td>
 				<td id="initialMatrixHead">Initial mutation matrix</td>
 				<td id="initialPrincipalPartHead">Principal part</td>
 			</thead>
 			<tr>
-				<td style="padding-right: 30px"><div style="display: flex; justify-content: center;" id="WordContainer"></div></td>
 				<td><div style="display: flex; justify-content: center;" id="initialMatrix"></div></td>
 				<td><div style="display: flex; justify-content: center;" id="initialPrincipalPart"></div></td>
 			</tr>
