--- a/mutPattern.html
+++ b/mutPattern.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mutPattern.css">
 	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
 	<!-- Import math.js to perform maths operations in JS -->
 	<script src="math.js" type="text/javascript"></script>
-	<script type="text/javascript" src="mutPattern.js"></script>
+	
+	<script src="https://d3js.org/d3.v7.min.js"></script>
+
+
 </head>
 
 <body>
+	
 	<header>
 		<a href="home.html"><img style="width: 80px" src="logo.png"></a>
 		<h3 >Visual Cluster Algebras</h3>
@@ -241,7 +246,8 @@
 	<div style="font-weight: bold;">4. Current data</div>
 	<table>
 	<thead>
-		<td id="iniMutMatHeader" style="visibility: hidden;">Mutation matrix</td>
+		<td id="iniMutMatHeader" style="visibility: hidden; justify-content: center;">Mutation matrix</td>
+		<td style="justify-content: center; text-align:center ;">Quiver</td>
 		<td id="iniAtropMinHeader" style="visibility: hidden;">\(\mathbb{A}(\mathbb{Z}^{\rm min})\)-tropical point</td>
 		<td id="iniYtropMinHeader" style="visibility: hidden;">\(\mathbb{Y}(\mathbb{Z}^{\rm min})\)-tropical point</td>
 		<td id="iniAtropMaxHeader" style="visibility: hidden;">\(\mathbb{A}(\mathbb{Z}^{\rm max})\)-tropical point</td>
@@ -249,12 +255,15 @@
 	</thead>
 	<tr>
 		<td><div style="display: flex; justify-content: center;" id="initialMatrix"></div></td>
+		<td><svg id="graph" width="400" height = "300"></svg></td>
 		<td><div style="display: flex; justify-content: center;" id="initialATropMin"></div></td>
 		<td><div style="display: flex; justify-content: center;" id="initialYTropMin"></div></td>
 		<td><div style="display: flex; justify-content: center;" id="initialATropMax"></div></td>
 		<td><div style="display: flex; justify-content: center;" id="initialYTropMax"></div></td>
 	</tr>
 </table>
+
+<div>
 <button id="matrixPropertiesButton" onclick="toggleDiv(this.id,matrixProperties, 'matrix properties')">Show matrix properties</button><br>
 
 	<div id="matrixProperties" style="display: none;">
@@ -274,6 +283,9 @@
 		</table>
 	</div>
 </div>
+
+
+	
 
 
 <br>
@@ -296,6 +308,7 @@
 
 </main>
 </body>
+<script type="text/javascript" src="mutPattern.js"></script>
 </html>
 
 
