--- a/mutPattern.html
+++ b/mutPattern.html
@@ -255,7 +255,7 @@
 	</thead>
 	<tr>
 		<td><div style="display: flex; justify-content: center;" id="initialMatrix"></div></td>
-		<td><svg id="graph" width="400" height = "300"></svg></td>
+		<td><svg xmlns="http://www.w3.org/2000/svg" id="graph" width="400" height = "300"></svg></td>
 		<td><div style="display: flex; justify-content: center;" id="initialATropMin"></div></td>
 		<td><div style="display: flex; justify-content: center;" id="initialYTropMin"></div></td>
 		<td><div style="display: flex; justify-content: center;" id="initialATropMax"></div></td>
