Add sequence of mutable indices to output

--- a/Grassmannian-rectseed.html
+++ b/Grassmannian-rectseed.html
@@ -53,10 +53,12 @@
 			<thead>
 				<td id="initialMatrixHead">Rectangles seed initial mutation matrix</td>
 				<td id="initialPrincipalPartHead">Principal part</td>
+				<td id="mutableIndicesHead">Mutable indices</td>
 			</thead>
 			<tr>
 				<td><div style="display: flex; justify-content: center;" id="initialMatrix"></div></td>
 				<td><div style="display: flex; justify-content: center;" id="initialPrincipalPart"></div></td>
+				<td><div style="display: flex; justify-content: center;" id="mutableIndices"></div></td>
 			</tr>
 		</table>
 
