--- a/mutPattern.html
+++ b/mutPattern.html
@@ -4,11 +4,18 @@
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mutPattern.css">
-	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
-	<!-- Import math.js to perform maths operations in JS -->
-	<script src="math.js" type="text/javascript"></script>
-	
-	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
+	<script>
+MathJax = {
+		startup: {
+		  ready() {
+			MathJax.startup.defaultReady();
+			//  MathJax.tex2svgPromise() is available here
+		  }
+		}
+	  };
+	</script>
+		<script src="https://d3js.org/d3.v7.min.js"></script>
 
 
 </head>
