--- a/mutPattern.html
+++ b/mutPattern.html
@@ -5,17 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mutPattern.css">
 	<script id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script> 
-	<script>
-MathJax = {
-		startup: {
-		  ready() {
-			MathJax.startup.defaultReady();
-			//  MathJax.tex2svgPromise() is available here
-		  }
-		}
-	  };
-	</script>
-		<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="https://d3js.org/d3.v7.min.js"></script>
 
 
 </head>
@@ -384,7 +374,7 @@ MathJax = {
 </body>
 <script type="text/javascript" src="mutPattern.js"></script>
 <script type="text/javascript" src="doubleBruhat.js"></script>
-<script type="text/javascript" src="acyclic.js"></script>	
+<!-- <script type="text/javascript" src="acyclic.js"></script>	 -->  
 <script type="text/javascript" src="Grassmannian-rectseed.js" ></script>
 </html>
 
