acyclic: default slices for frieze & Y-frieze

--- a/acyclic.html
+++ b/acyclic.html
@@ -28,7 +28,7 @@
   	<div class="dashboard">
   	<div style="font-weight: bold;">1. Choose rank of acyclic cluster algebra</div>
   	<p style="display: inline-block;">n = </p>
-  	<input type="number" id="userInputRank" min="1" step="1" value="3">
+  	<input type="number" id="userInputRank" min="1" step="1" value="4">
   	<button onclick="rankToCartan()">Submit</button>
   	</div>
 
@@ -49,7 +49,7 @@
   	  	<table>
   			<tr>
   				<td style="padding-right: 30px">
-  					<input type="radio" name="selectedObj" id="friezePatCheckBox" >
+  					<input type="radio" name="selectedObj" id="friezePatCheckBox" checked>
 					<label for="friezePatCheckBox">Frieze pattern</label><br>
 					<input type="radio" name="selectedObj" id="YfriezePatCheckBox" >
 					<label for="YfriezePatCheckBox">Y-frieze pattern</label><br> 
