mutPattern: disallow horizontal mut. matrix

--- a/mutPattern.html
+++ b/mutPattern.html
@@ -102,38 +102,26 @@
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="0"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
+					<th class="cell-inactive" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="1"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="2"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="3"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="4"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="5"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="6"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="7"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="8"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="9"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="10"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="11"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="12"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="13"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="14"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="15"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -142,16 +130,11 @@
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="17"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="18"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="19"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="20"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="21"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="22"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="23"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -162,14 +145,10 @@
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="26"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="27"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="28"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="29"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="30"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="31"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 								<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -182,12 +161,9 @@
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="35"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="36"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="37"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="38"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="39"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -202,10 +178,8 @@
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="44"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="45"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="46"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="47"></th>
+					<th class="cell-inactive"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -222,8 +196,7 @@
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="53"></th>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="54"></th>
-					<th class="cell" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="55"></th>
+					<th class="cell-inactive"></th>
 				</tr>
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
@@ -319,7 +292,7 @@
 <div class="dashboardOff" id="inDashboardAcyclic1" >
 	<div style="font-weight: bold;">1. Choose rank of mutation matrix</div>
 	<p style="display: inline-block;">n = </p>
-  	<input type="number" id="userInputRankAcyclic" min="1" step="1" value="3">
+  	<input type="number" id="userInputRankAcyclic" min="1" step="1" value="4">
   	<button onclick="rankToCartan()">Submit</button>
 </div>
 <br>
