mutPattern: add \tilde A_1, remove help

--- a/mutPattern.html
+++ b/mutPattern.html
@@ -301,7 +301,7 @@
 <!-- ACYCLIC DASHBOARDS -->
 <!-- Acyclic dashboard 1 -->
 <div class="dashboardOff" id="inDashboardAcyclic1" >
-	<div style="font-weight: bold;">1. Choose rank of mutation matrix</div>
+	<div style="font-weight: bold;">1. Choose rank of cluster algebra</div>
 	<p style="display: inline-block;">n = </p>
   	<input type="number" id="userInputRankAcyclic" min="1" step="1" value="4">
   	<button onclick="rankToCartan()">Submit</button>
@@ -381,7 +381,6 @@
 	
 
 <!-- existing content -->
-<button class="help-button" onclick="window.open('help-mutmat.mp4', '_blank')">Need help?</button>
 
 </main>
 </body>
