--- a/mutPattern.html
+++ b/mutPattern.html
@@ -374,6 +374,14 @@
 		<button id="mutationHistoryButton" onclick="toggleDiv(this.id, mutationHistory, 'mutation history')" style="display: none">Show mutation history</button>
 		<div id="mutationHistory" style="display: none"></div>
 	</div>
+
+	<br>
+	<div>
+		<button id="trackClusterVarsButton" onclick="trackClusterVars()">Track cluster variables</button>
+		<button id="stopTrackingClusterVarsButton" onclick="initTrackingClusterVars()" style="visibility: hidden">Stop tracking</button>
+		<br>
+		<div id="clusterVarsOutput" style="visibility: hidden; border-style: dotted;"></div>
+	</div>
 </div>
 
 
@@ -384,6 +392,7 @@
 
 </main>
 </body>
+<script src="https://cdn.jsdelivr.net/gh/sl2tilings/sl2tilings.github.io@4409ef7d82256f2b4ad48fff9e5a9a9624ebf36c/polynomial.js"></script>
 <script type="text/javascript" src="mutPattern.js"></script>
 <script type="text/javascript" src="doubleBruhat.js"></script>
 <script type="text/javascript" src="Grassmannian-rectseed.js" ></script>
