references and quiver valuation
- Added a reference button at the top of mutPattern.html, with references to the main computation rules / definitions
- The weight of a quiver with edge (k,k) is now displayed as k

--- a/mutPattern.html
+++ b/mutPattern.html
@@ -29,6 +29,17 @@
 <!-- MAIN BODY -->
 <main>
 
+<!-- DASHBOARD 0: References and notation -->
+	<button id="referencesButton" onclick="toggleDiv(this.id,references, 'references')">Show references and notation</button><br>
+	<div id="references" style="display: none;">
+		<p>Matrix and cluster algebra mutation: <i><a href="https://projecteuclid.org/journals/duke-mathematical-journal/volume-126/issue-1/Cluster-algebras-III-Upper-bounds-and-double-Bruhat-cells/10.1215/S0012-7094-04-12611-9.short">Cluster algebras III: Upper bounds and double Bruhat cells</a></i></p>
+		<p>Matrix from double Bruhat cells: <i><a href="https://www.sciencedirect.com/science/article/pii/S0001870804002737">Quantum cluster algebras</a></i></p>
+		<p>Matrix from Grassmannians: <i><a href=""></a></i></p>
+		<p>Matrix of affine Dynkin type: <i><a href="https://arxiv.org/pdf/0906.2026">Frises</a></i></p>
+		<p>\(\mathcal{A}\) and \(\mathcal{X}\)-tropical points: <i><a href="https://arxiv.org/abs/2311.17712v3">Tropical friezes and cluster-additive functions via Fock-Goncharov duality and a conjecture of Ringel</a></i></p>
+	</div>
+	<br>
+
 <!-- DASHBOARD 1: Selecting input method -->
 <div class="dashboard">
 	<div style="font-weight: bold;">1. Select input method</div>
