mutPattern: add specialisation

--- a/home.html
+++ b/home.html
@@ -35,7 +35,8 @@
   </i>
     <section id="matrix-mutation">
       <div style="display: flex; flex-direction: column; align-items: flex-start;">
-        <p>Computing matrix mutation for double Bruhat cells, Grassmannians and custom mutation matrices.</p>
+        <b><a style="color: red;" href="mutPattern.html">Matrix mutation</a>, maintained by Jon Cheah, Antoine de Saint Germain and Andrei Zabolotskii</b> 
+        <p>Compute matrix mutation and cluster variables for given mutation matrix, double Bruhat cell, or Grassmannian.</p>
       </div>
       
     </section>
