--- a/mutPattern.html
+++ b/mutPattern.html
@@ -125,8 +125,7 @@
 				<tr>
 					<th class="cell" onmouseover="hoverSelect(this.id)" 
 					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="0"></th>
-					<th class="cell-inactive" onmouseover="hoverSelect(this.id)" 
-					onmouseout="hoverOff(this.id)" onclick="createEmptyMat(this.id)" id="1"></th>
+					<th class="cell-inactive"></th>
 					<th class="cell-inactive"></th>
 					<th class="cell-inactive"></th>
 					<th class="cell-inactive"></th>
