--- a/greedy.html
+++ b/greedy.html
@@ -36,18 +36,18 @@
   	<table>
   		<tr>
   			<td>
-  				<input type="number"  maxlength="4" size="3" value="0" min="0" max="0">
+  				<input type="text"  maxlength="4" size="3" value="0" readonly>
   			</td>
   			<td>
-  				<input onchange="displayMutMat()" type="number" maxlength="4" size="3" step="1" value="1" min="1" id="bValue">
+  				<input onchange="displayMutMat()" type="text" maxlength="4" size="3" step="1" value="1" min="1" id="bValue">
   			</td>
   		</tr>
   		<tr>
   			<td>
-  				<input onchange="displayMutMat()" type="number" maxlength="4" size="3" step="1" value="-1" max="-1" id="cValue">
+  				<input onchange="displayMutMat()" type="text" maxlength="4" size="3" step="1" value="-1" max="-1" id="cValue">
   			</td>
   			<td>
-  				<input type="number" maxlength="4" size="3" value="0" min="0" max="0">
+  				<input type="text" maxlength="4" size="3" value="0" readonly>
   			</td>
   		</tr>
   	</table>
