mutPattern: refactor output initialisation

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
     </section>
   </main>
   <footer>
-    <p>Copyright &copy; 2025 Visual Cluster Algebras</p>
+    <p>Copyright &copy; 2025–2026 Visual Cluster Algebras</p>
   </footer>
 </body>
 </html>
